# ipse2.0-mining

./: .gitignore  .gitignore.swp  .gitmodules  Call.yml  Cargo.toml  Makefile  README.md  config.yaml  engraver-2.4.0-x86_64-unknown-linux-gnu-cpu-gpu.tar.xz  ipse.json  miners_config.yaml  miners_yaml.yaml  new_config.yaml  supervision.py  supervision.spec  test.py  update_config.py  update_config.spec  update_yaml.py  w10supervision.py  w10supervision.spec
10717349404514113857/: supervision-10717349404514113857.py
src/: config.rs  cpu_worker.rs  gpu_worker.rs  gpu_worker_async.rs  main.rs  miner.rs  poc_hashing.rs  reader.rs  requests.rs
src/com/: api.rs  client.rs  mod.rs  poc_staking.rs  runtimes.rs  timestamp.rs
test/: miners_yaml.yaml  update_yaml.py
